--- a/ascolorbox.sty
+++ b/ascolorbox.sty
@@ -14,7 +14,7 @@
 }
 
 \DeclareTColorBox{simplesquarebox}{ o m O{.5} O{} }% 
-{empty, left=2mm, right=2mm, top=-1mm, attach boxed title to top left={xshift={1.2\ascb@zw}}, boxed title style={empty,left=-2mm,right=-2mm}, colframe=black, coltitle=black, coltext=black, breakable, 
+{empty, left=2mm, right=2mm, top=-1mm, attach boxed title to top left={xshift=11pt}}, boxed title style={empty,left=-2mm,right=-2mm}, colframe=black, coltitle=black, coltext=black, breakable, 
 underlay unbroken={\draw[black,line width=#3pt](title.east) -- (title.east-|frame.east) -- (frame.south east) -- (frame.south west) -- (title.west-|frame.west) -- (title.west); },
 underlay first={\draw[black,line width=#3pt](title.east) -- (title.east-|frame.east) -- (frame.south east) ;
 \draw[black,line width=#3pt] (frame.south west) -- (title.west-|frame.west) -- (title.west); },
@@ -476,7 +476,7 @@ title={#2},#1}
 \newenvironment{ascolorbox15}[2][]{%
 \begin{ascolorbox@originalascolorbox15}[#1]{#2}%
 \setlength{\columnseprule}{0pt}%
-\columnsep={5.5\ascb@zw}
+\columnsep={51pt}
 \begin{multicols}{2}%
 }{%
 \end{multicols}%
