--- a/ascolorbox.sty
+++ b/ascolorbox.sty
@@ -1,16 +1,24 @@
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{ascolorbox}[2019/4/30, Version 1.0.3]
-\RequirePackage{tikz,tcolorbox,varwidth,multicol,ifthen,ifluatex}
+\RequirePackage{tikz,tcolorbox,varwidth,multicol,ifthen,ifptex,ifluatex,ifuptex,ifxetex}
 
 \usetikzlibrary{calc}
 \tcbuselibrary{xparse,hooks,skins,breakable}
 
-\ifthenelse{\boolean{luatex}}{\RequirePackage{luatexja}}{}
-
-\ifthenelse{\boolean{luatex}}{
-      \def\ascb@zw{\zw}
-}{%pLaTeX, upLaTeX
-        \def\ascb@zw{zw}
+\ifthenelse{\boolean{luatex}}{% LuaLaTeX
+              \RequirePackage{luatexja}
+       }{
+              \ifthenelse{\boolean{xetex}}{% XeLaTeX
+                     \RequirePackage{zxjatype}
+              }{
+                     \ifthenelse{\boolean{ptex}}{% pLaTeX
+                     }{
+                            \ifthenelse{\boolean{uptex}}{% upLaTeX
+                            }{% pdfLaTeX
+                                   \RequirePackage[whole]{bxcjkjatype}
+                            }
+                     }
+              }
 }
 
 \DeclareTColorBox{simplesquarebox}{ o m O{.5} O{} }% 
@@ -21,23 +29,23 @@ underlay first={\draw[black,line width=#3pt](title.east) -- (title.east-|frame.e
 underlay middle={\draw[black,line width=#3pt](frame.north east) -- (frame.south east) ;
 \draw[black,line width=#3pt](frame.south west) -- (frame.north west) ;},
 underlay last={\draw[black,line width=#3pt](frame.north east) -- (frame.south east) -- (frame.south west) -- (frame.north west) ;},
-fonttitle=\gtfamily, IfValueTF={#1}{title=【#2】〈#1〉}{title=【#2】},#4}
+fonttitle=\bfseries, IfValueTF={#1}{title=【#2】〈#1〉}{title=【#2】},#4}
 
 
 \DeclareTColorBox{practicebox}{ m O{} }%
-{enhanced,sharp corners,colback=black!10!white, colframe=black!10!white , attach boxed title to top left={xshift=0mm,yshift=1mm}, fonttitle=\gtfamily,varwidth boxed title=0.85\linewidth, breakable, arc=0mm,title={#1},
+{enhanced,sharp corners,colback=black!10!white, colframe=black!10!white , attach boxed title to top left={xshift=0mm,yshift=1mm}, fonttitle=\bfseries,varwidth boxed title=0.85\linewidth, breakable, arc=0mm,title={#1},
 enlarge top by=2mm,
    boxed title style={empty,arc=0pt,outer arc=0pt,boxrule=0pt},
    underlay unbroken and first={
       \draw[black,ultra thick] (frame.north west) -- (frame.north east);
       \draw[black] ([yshift=-.8mm]frame.north west) -- ([yshift=-.8mm]frame.north east);
       \fill[black] ([yshift=1mm]frame.north west) rectangle +(6mm,6mm);
-      \node[white] at ([xshift=3mm,yshift=4mm]frame.north west){\large\textgt{練}};
-      \node at ([xshift=9mm,yshift=4mm]frame.north west){\large\textgt{習}};
+      \node[white] at ([xshift=3mm,yshift=4mm]frame.north west){\large\textbf{練}};
+      \node at ([xshift=9mm,yshift=4mm]frame.north west){\large\textbf{習}};
       \fill[black] ([xshift=12mm,yshift=1mm]frame.north west) rectangle +(6mm,6mm);
-      \node[white] at ([xshift=15mm,yshift=4mm]frame.north west){\large\textgt{問}};
-      \node at ([xshift=21mm,yshift=4mm]frame.north west){\large\textgt{題}};
-      \draw[thick] ([yshift=1mm]frame.north west) -- ++(0mm,6mm) -- ++(24mm,0mm) -- node[right=2mm] {\textgt{#1}} ++(0mm,-6mm) -- cycle;
+      \node[white] at ([xshift=15mm,yshift=4mm]frame.north west){\large\textbf{問}};
+      \node at ([xshift=21mm,yshift=4mm]frame.north west){\large\textbf{題}};
+      \draw[thick] ([yshift=1mm]frame.north west) -- ++(0mm,6mm) -- ++(24mm,0mm) -- node[right=2mm] {\textbf{#1}} ++(0mm,-6mm) -- cycle;
   },
    underlay unbroken and last={
       \draw[black,ultra thick] (frame.south west) -- (frame.south east);
@@ -47,7 +55,7 @@ enlarge top by=2mm,
 
 
 \DeclareTColorBox{ascolorbox1}{ o m O{}}%
-{enhanced,colback=white, skin=enhancedlast jigsaw,breakable, attach boxed title to top left={xshift=-4mm,yshift=-0.5mm}, fonttitle=\bfseries\gtfamily, varwidth boxed title=0.85\linewidth, colbacktitle=black!45!white,colframe=black,
+{enhanced,colback=white, skin=enhancedlast jigsaw,breakable, attach boxed title to top left={xshift=-4mm,yshift=-0.5mm}, fonttitle=\bfseries, varwidth boxed title=0.85\linewidth, colbacktitle=black!45!white,colframe=black,
    boxed title style={empty,arc=0pt,outer arc=0pt,boxrule=0pt},
    underlay boxed title={%
 \fill[black!45!white] (title.north west) -- (title.north east) -- +(\tcboxedtitleheight-1mm,-\tcboxedtitleheight+1mm)
@@ -106,7 +114,7 @@ underlay last={\draw[#2,line width=1pt]
 
 \DeclareTColorBox{ascolorbox4}{ o m O{3} O{}}%
 {enhanced, colback=white, colframe=white,
-attach boxed title to top left={xshift=1cm,yshift=-\tcboxedtitleheight/2}, fonttitle=\bfseries,varwidth boxed title=0.85\linewidth, coltitle=black, fonttitle=\gtfamily, 
+attach boxed title to top left={xshift=1cm,yshift=-\tcboxedtitleheight/2}, fonttitle=\bfseries,varwidth boxed title=0.85\linewidth, coltitle=black, fonttitle=\bfseries, 
 enlarge top by=2mm, enlarge bottom by=2mm, breakable, sharp corners,
 boxed title style={colback=white,left=0mm,right=0mm}, 
 borderline={.75pt}{#3pt}{black,dotted},
@@ -163,11 +171,11 @@ IfValueTF={#1}{title=【#2】〈#1〉}{title=【#2】},#4}
 
 
 \DeclareTColorBox{ascolorbox5}{ O{} m O{black} O{} }%
-{enhanced,colback=white, colframe=white, coltext=#3, attach boxed title to top left={xshift=1mm,yshift=0mm}, fonttitle=\bfseries\gtfamily,varwidth boxed title=0.85\linewidth, colbacktitle=black!45!white, breakable,
+{enhanced,colback=white, colframe=white, coltext=#3, attach boxed title to top left={xshift=1mm,yshift=0mm}, fonttitle=\bfseries,varwidth boxed title=0.85\linewidth, colbacktitle=black!45!white, breakable,
 enlarge top by=3mm, enlarge bottom by=3mm, 
    boxed title style={empty,arc=0pt,outer arc=0pt,boxrule=0pt},
    underlay boxed title={\fill[#3] (title.north west) 
-      -- (title.north east) --node[right=3mm]{\textgt{#1}}+(0,-\tcboxedtitleheight+.5mm)
+      -- (title.north east) --node[right=3mm]{\textbf{#1}}+(0,-\tcboxedtitleheight+.5mm)
       -- ([xshift=-1mm,yshift=.5mm]frame.north east) 
       -- +(0mm,-.5mm) -- (title.south west) -- cycle;
       \draw[#3] ([yshift=-.5mm]title.south west) --
@@ -253,7 +261,7 @@ title={#1},#3}
 
 \DeclareTColorBox{ascolorbox10}{ o m O{.8} O{} }%
 {enhanced, interior hidden, colframe=white,
-attach boxed title to top left={xshift=6mm,yshift*=-1.5mm}, fonttitle=\gtfamily, coltitle=black, 
+attach boxed title to top left={xshift=6mm,yshift*=-1.5mm}, fonttitle=\bfseries, coltitle=black, 
 , left=1mm, right=1mm,breakable,top=0mm,
 boxed title style={empty,left=-2mm,right=-2mm}, 
 underlay unbroken and first={\draw[black!40!white,line width=1pt, dotted]
@@ -275,7 +283,7 @@ IfValueTF={#1}{title=【#2】〈#1〉}{title=【#2】},#4}
 
 \DeclareTColorBox{ascolorbox11}{ o m O{4} O{} }%
 {enhanced, colback=white, colframe=white,
-attach boxed title to top left={xshift=1cm,yshift=-3mm}, fonttitle=\gtfamily,varwidth boxed title=0.85\linewidth, 
+attach boxed title to top left={xshift=1cm,yshift=-3mm}, fonttitle=\bfseries,varwidth boxed title=0.85\linewidth, 
 boxed title style={empty,left=-2mm,right=-2mm}, coltitle=black,breakable,
 underlay unbroken={\draw[gray!40!white,line width=.5pt]
        ([yshift=-#3*0.5pt]title.east)--([yshift=-#3*0.5pt]title.east-|frame.east) -- ++ (0pt,#3pt) -- ++ (-#3pt,0pt)
@@ -476,7 +484,7 @@ title={#2},#1}
 \newenvironment{ascolorbox15}[2][]{%
 \begin{ascolorbox@originalascolorbox15}[#1]{#2}%
 \setlength{\columnseprule}{0pt}%
-\columnsep={51pt}
+\columnsep=51pt
 \begin{multicols}{2}%
 }{%
 \end{multicols}%
@@ -499,7 +507,7 @@ IfValueTF={#1}{title={#2〈#1〉}}{title=#2},#3}
 
 \DeclareTColorBox{ascolorbox17}{ o m O{gray} O{}}%
 {enhanced, colback=white, colframe=white,
-attach boxed title to top left={xshift=1.5cm,yshift=-\tcboxedtitleheight/2}, fonttitle=\bfseries,varwidth boxed title=0.85\linewidth, coltitle=black, fonttitle=\gtfamily, 
+attach boxed title to top left={xshift=1.5cm,yshift=-\tcboxedtitleheight/2}, fonttitle=\bfseries,varwidth boxed title=0.85\linewidth, coltitle=black, fonttitle=\bfseries, 
 enlarge top by=2mm, enlarge bottom by=2mm, breakable,
 boxed title style={colback=white,left=0mm,right=0mm},
 underlay unbroken={\draw[fill=black, draw=black]
@@ -536,7 +544,7 @@ cos +(\tcboxedtitleheight,\tcboxedtitleheight/2) sin +(\tcboxedtitleheight,\tcbo
 
 \DeclareTColorBox{ascolorbox19}{ o m O{2} O{}}%
 {enhanced, colback=white, colframe=white,
-attach boxed title to top left={xshift=5mm,yshift=-\tcboxedtitleheight/2}, fonttitle=\bfseries,varwidth boxed title=0.85\linewidth, coltitle=black, fonttitle=\gtfamily, 
+attach boxed title to top left={xshift=5mm,yshift=-\tcboxedtitleheight/2}, fonttitle=\bfseries,varwidth boxed title=0.85\linewidth, coltitle=black, fonttitle=\bfseries, 
 enlarge top by=2mm, enlarge bottom by=2mm, breakable, top=3mm, bottom=3mm,
 boxed title style={colback=white,left=0mm,right=0mm,top=-1mm,bottom=-1mm}, 
 underlay unbroken={\draw[black!40!white,line width=.5pt]
