add parameter pattern

--- a/ascolorbox.sty
+++ b/ascolorbox.sty
@@ -1,5 +1,6 @@
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{ascolorbox}[2019/4/30, Version 1.0.3]
+% original version: 2019/4/30, Version 1.0.3]
 \RequirePackage{tikz,tcolorbox,varwidth,multicol,ifthen,ifptex,ifluatex,ifuptex,ifxetex}
 
 \usetikzlibrary{calc}
@@ -32,9 +33,63 @@
                                    \def\ascb@gtfamily{\gtfamily}
                                    \def\ascb@zw#1#2{#2}
                             }
-                     }
+    
+                 }
               }
 }
+
+\newenvironment{reviewnote}[1][]{%
+  \csdef{review@withcaption}{true}
+  \notblank{#1}{
+    \begin{rvsimplesquarebox@caption}{#1}[rv line width=5pt,rv line color=red]
+  }{
+    \csundef{review@withcaption}
+    \begin{rvsimplesquarebox@nocaption}
+  }
+}{
+  \ifcsdef{review@withcaption}{
+    \end{rvsimplesquarebox@caption}
+  }{
+    \end{rvsimplesquarebox@nocaption}
+  }
+}
+
+\newenvironment{reviewcaution}[1][]{%
+  \csdef{review@withcaption}{true}
+  \notblank{#1}{
+    \begin{rvsimplesquarebox@caption}{#1}[rv line width=.5pt]
+  }{
+    \csundef{review@withcaption}
+    \begin{rvsimplesquarebox@nocaption}
+  }
+}{
+  \ifcsdef{review@withcaption}{
+    \end{rvsimplesquarebox@caption}
+  }{
+    \end{rvsimplesquarebox@nocaption}
+  }
+}
+
+\def\tcb@rv@line@width{.5pt}
+\def\tcb@rv@line@color{black}
+\tcbset{
+  rv line width/.store in=\tcb@rv@line@width,
+  rv line color/.store in=\tcb@rv@line@color
+}
+
+\DeclareTColorBox{rvsimplesquarebox@nocaption}{ O{} }% 
+{}
+
+\DeclareTColorBox{rvsimplesquarebox@caption}{ m O{} }% 
+{empty, left=2mm, right=2mm, top=-1mm, attach boxed title to top left={xshift=\ascb@zw{1.2}{11pt}}, boxed title style={empty,left=-2mm,right=-2mm}, colframe=\tcb@rv@line@color, coltitle=\tcb@rv@line@color, coltext=\tcb@rv@line@color, breakable,
+underlay unbroken={\draw[\tcb@rv@line@color,line width=\tcb@rv@line@width](title.east) -- (title.east-|frame.east) -- (frame.south east) -- (frame.south west) -- (title.west-|frame.west) -- (title.west); },
+underlay first={\draw[\tcb@rv@line@color,line width=\tcb@rv@line@width](title.east) -- (title.east-|frame.east) -- (frame.south east) ;
+\draw[\tcb@rv@line@color,line width=\tcb@rv@line@width] (frame.south west) -- (title.west-|frame.west) -- (title.west); },
+underlay middle={\draw[\tcb@rv@line@color,line width=\tcb@rv@line@width](frame.north east) -- (frame.south east) ;
+\draw[\tcb@rv@line@color,line width=\tcb@rv@line@width](frame.south west) -- (frame.north west) ;},
+underlay last={\draw[\tcb@rv@line@color,line width=\tcb@rv@line@width](frame.north east) -- (frame.south east) -- (frame.south west) -- (frame.north west) ;},
+fonttitle=\ascb@gtfamily, title=【#1】,
+#2}
 
 \DeclareTColorBox{simplesquarebox}{ o m O{.5} O{} }% 
 {empty, left=2mm, right=2mm, top=-1mm, attach boxed title to top left={xshift=\ascb@zw{1.2}{11pt}}, boxed title style={empty,left=-2mm,right=-2mm}, colframe=black, coltitle=black, coltext=black, breakable, 
@@ -44,8 +99,9 @@ underlay first={\draw[black,line width=#3pt](title.east) -- (title.east-|frame.e
 underlay middle={\draw[black,line width=#3pt](frame.north east) -- (frame.south east) ;
 \draw[black,line width=#3pt](frame.south west) -- (frame.north west) ;},
 underlay last={\draw[black,line width=#3pt](frame.north east) -- (frame.south east) -- (frame.south west) -- (frame.north west) ;},
-fonttitle=\ascb@gtfamily, IfValueTF={#1}{title=【#2】〈#1〉}{title=【#2】},#4}
-
+fonttitle=\ascb@gtfamily, %
+IfValueTF={#1}{title=【#2】〈#1〉}{title=【#2】},
+#4}
 
 \DeclareTColorBox{practicebox}{ m O{} }%
 {enhanced,sharp corners,colback=black!10!white, colframe=black!10!white , attach boxed title to top left={xshift=0mm,yshift=1mm}, fonttitle=\ascb@gtfamily,varwidth boxed title=0.85\linewidth, breakable, arc=0mm,title={#1},
