--- a/ascolorbox.sty
+++ b/ascolorbox.sty
@@ -48,55 +48,60 @@
 % ここからテスト中。こういうパラメータを変換で作って渡したいと思ったんだけど、展開でうまくいかないげ
 \newcommand{\reviewnote@tcoption}{rv line width=5pt,rv line color=red}
 
-% 結局これをパラメータベースで作るなら、tcoptionパラメータも作ってしまえばいい、と言えるか。
+% 結局これをパラメータベースで作らないといけないので、tcoptionパラメータもそのときに付けてしまえばいいか
 \newenvironment{reviewnote}[1][]{%
-  \csdef{review@withcaption}{true}
+  \csdef{rv@withcaption}{true}
   \notblank{#1}{
-%    \begin{rvsimplesquarebox@caption}{#1}[\reviewnote@tcoption]% こちらはだめ。
+%    \begin{rv@simplesquarebox@caption}{#1}[\reviewnote@tcoption]% こちらはだめ。
 % ! Package pgfkeys Error: I do not know the key '/tcb/rv line width=5pt,rv line color=red' and I am going to ignore it. Perhaps you misspelled it.
-    \begin{rvsimplesquarebox@caption}{#1}[rv line width=5pt,rv line color=red]% 直接書けば通る
+    \begin{rv@simplesquarebox@caption}{#1}[rv line width=5pt,rv line color=red]% 直接書けば通る
   }{
-    \csundef{review@withcaption}
-    \begin{rvsimplesquarebox@nocaption}
+    \csundef{rv@withcaption}
+    \begin{rv@simplesquarebox@nocaption}
   }
 }{
-  \ifcsdef{review@withcaption}{
-    \end{rvsimplesquarebox@caption}
+  \ifcsdef{rv@withcaption}{
+    \end{rv@simplesquarebox@caption}
   }{
-    \end{rvsimplesquarebox@nocaption}
+    \end{rv@simplesquarebox@nocaption}
   }
 }
 
+% titleオプションを付ける可能性があることを考えると、Re:VIEW側ではcaption有無でやはり設定分けたほうがよさそう。
 \newenvironment{reviewcaution}[1][]{%
-  \csdef{review@withcaption}{true}
+  \csdef{rv@withcaption}{true}
   \notblank{#1}{
-    \begin{rvsimplesquarebox@caption}{#1}[rv line width=.5pt]
+    \begin{rv@simplesquarebox@caption}{#1}[rv line width=.5pt,title=【#1】]
   }{
-    \csundef{review@withcaption}
-    \begin{rvsimplesquarebox@nocaption}
+    \csundef{rv@withcaption}
+    \begin{rv@simplesquarebox@nocaption}
   }
 }{
-  \ifcsdef{review@withcaption}{
-    \end{rvsimplesquarebox@caption}
+  \ifcsdef{rv@withcaption}{
+    \end{rv@simplesquarebox@caption}
   }{
-    \end{rvsimplesquarebox@nocaption}
+    \end{rv@simplesquarebox@nocaption}
   }
 }
 
-\DeclareTColorBox{rvsimplesquarebox@nocaption}{ O{} }% 
-{}
+\DeclareTColorBox{rv@simplesquarebox@nocaption}{ O{} }% 
+{empty, left=2mm, right=2mm, top=2.5mm, breakable,
+  borderline={\tcb@rv@line@width}{0pt}{\tcb@rv@line@color},
+  arc=0mm,
+  #1}
 
-\DeclareTColorBox{rvsimplesquarebox@caption}{ m O{} }% 
-{empty, left=2mm, right=2mm, top=-1mm, attach boxed title to top left={xshift=\ascb@zw{1.2}{11pt}}, boxed title style={empty,left=-2mm,right=-2mm}, colframe=\tcb@rv@line@color, coltitle=\tcb@rv@line@color, coltext=\tcb@rv@line@color, breakable,
-underlay unbroken={\draw[\tcb@rv@line@color,line width=\tcb@rv@line@width](title.east) -- (title.east-|frame.east) -- (frame.south east) -- (frame.south west) -- (title.west-|frame.west) -- (title.west); },
-underlay first={\draw[\tcb@rv@line@color,line width=\tcb@rv@line@width](title.east) -- (title.east-|frame.east) -- (frame.south east) ;
-\draw[\tcb@rv@line@color,line width=\tcb@rv@line@width] (frame.south west) -- (title.west-|frame.west) -- (title.west); },
-underlay middle={\draw[\tcb@rv@line@color,line width=\tcb@rv@line@width](frame.north east) -- (frame.south east) ;
-\draw[\tcb@rv@line@color,line width=\tcb@rv@line@width](frame.south west) -- (frame.north west) ;},
-underlay last={\draw[\tcb@rv@line@color,line width=\tcb@rv@line@width](frame.north east) -- (frame.south east) -- (frame.south west) -- (frame.north west) ;},
-fonttitle=\ascb@gtfamily, title=【#1】,
+\DeclareTColorBox{rv@simplesquarebox@caption}{ m O{} }% 
+{empty, left=2mm, right=2mm, top=-1mm, attach boxed title to top left={xshift=\ascb@zw{1.2}{11pt}}, boxed title style={empty,left=-2mm,right=-2mm}, colframe=\tcb@rv@line@color, coltitle=\tcb@rv@line@color, coltext=black, breakable,
+  underlay unbroken={\draw[\tcb@rv@line@color,line width=\tcb@rv@line@width](title.east) -- (title.east-|frame.east) -- (frame.south east) -- (frame.south west) -- (title.west-|frame.west) -- (title.west); },
+  underlay first={\draw[\tcb@rv@line@color,line width=\tcb@rv@line@width](title.east) -- (title.east-|frame.east) -- (frame.south east) ;
+  \draw[\tcb@rv@line@color,line width=\tcb@rv@line@width] (frame.south west) -- (title.west-|frame.west) -- (title.west); },
+  underlay middle={\draw[\tcb@rv@line@color,line width=\tcb@rv@line@width](frame.north east) -- (frame.south east) ;
+  \draw[\tcb@rv@line@color,line width=\tcb@rv@line@width](frame.south west) -- (frame.north west) ;},
+  underlay last={\draw[\tcb@rv@line@color,line width=\tcb@rv@line@width](frame.north east) -- (frame.south east) -- (frame.south west) -- (frame.north west) ;},
+  fonttitle=\ascb@gtfamily, title=【#1】,
 #2}
 
+%% ここから元々のascolorbox
 \DeclareTColorBox{simplesquarebox}{ o m O{.5} O{} }% 
 {empty, left=2mm, right=2mm, top=-1mm, attach boxed title to top left={xshift=\ascb@zw{1.2}{11pt}}, boxed title style={empty,left=-2mm,right=-2mm}, colframe=black, coltitle=black, coltext=black, breakable, 
 underlay unbroken={\draw[black,line width=#3pt](title.east) -- (title.east-|frame.east) -- (frame.south east) -- (frame.south west) -- (title.west-|frame.west) -- (title.west); },
